--- a/src/app/features/students/student-table/student-table.component.scss
+++ b/src/app/features/students/student-table/student-table.component.scss
@@ -1,3 +1,7 @@
+caption {
+  color: #747d86;
+}
+
 .block1 {
   width: 100%;
   min-width: 300px;
