--- a/src/app/features/subjects/subject-table/subject-table.component.scss
+++ b/src/app/features/subjects/subject-table/subject-table.component.scss
@@ -1,3 +1,7 @@
+caption {
+  color: #747d86;
+}
+
 .invalid {
   color: rgb(255, 96, 96);
 }
