--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -1,5 +1,5 @@
 button {
   min-width: 100px;
-  background: rgb(46, 146, 185);
+  background: #267696;
   color: white;
 }
